<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pwfinding.PwFindingSecondFragment">

    <TextView
        android:id="@+id/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_60dp"
        android:text="@string/pw_finding_email_finish"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#2a2a2a"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="16sp" />

    <TextView
        android:id="@+id/notification_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/send_email"
        android:layout_marginTop="65dp"
        android:text="@string/sign_up_certification_text"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#2a2a2a"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="16sp" />

    <EditText
        android:hint="@string/sign_up_certification_hint"
        android:autofillHints="@string/sign_up_email_hint"
        android:inputType="number"
        android:id="@+id/identification_number"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_goneMarginTop="@dimen/margin_4dp"
        app:layout_constraintTop_toBottomOf="@+id/notification_number"
        android:background="@drawable/search_background"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/certification_again"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@+id/identification_number"
        app:layout_constraintEnd_toEndOf="@+id/identification_number"
        android:background="@drawable/sign_up_btn"
        android:textColor="@color/cherish_text_gray"
        android:gravity="center"
        android:fontFamily="@font/notosanscjkkr_regular"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintTop_toBottomOf="@+id/identification_number"
        android:text="@string/sign_up_certification_again"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        style="@style/RoundButton.SignUp"
        android:text="@string/sign_up_button_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_21dp" />

</androidx.constraintlayout.widget.ConstraintLayout>