<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpSecondFragment">


    <ImageView
        android:contentDescription="@null"
        android:id="@+id/indicator_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/sign_up_indicator_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/indicator_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/sign_up_indicator_on"
        app:layout_constraintStart_toEndOf="@+id/indicator_first"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="9dp" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/indicator_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/sign_up_indicator_off"
        app:layout_constraintStart_toEndOf="@+id/indicator_second"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="9dp" />


    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_phone"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:textSize="@dimen/text_20sp"
        android:textColor="#2a2a2a"
        android:layout_marginTop="45dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator_first" />

    <EditText
        android:autofillHints="@string/sign_up_email_hint"
        android:inputType="phone"
        android:id="@+id/user_phone"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_text"
        android:background="@drawable/search_background"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:hint="@string/sign_up_phone_hint" />

    <TextView
        android:id="@+id/certification_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@+id/user_phone"
        app:layout_constraintEnd_toEndOf="@+id/user_phone"
        android:background="@drawable/sign_up_btn"
        android:textColor="@color/cherish_text_gray"
        android:gravity="center"
        android:fontFamily="@font/notosanscjkkr_regular"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintTop_toBottomOf="@+id/user_phone"
        android:text="@string/sign_up_certification_number"
        android:layout_marginTop="28dp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/certification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_certification_text"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:textSize="@dimen/text_20sp"
        android:textColor="#2a2a2a"
        android:layout_marginTop="37dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone" />

    <EditText
        android:visibility="gone"
        android:autofillHints="@string/sign_up_certification_hint"
        android:inputType="phone"
        android:id="@+id/user_certification_number"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        app:layout_goneMarginEnd="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/certification_text"
        android:background="@drawable/search_background"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:hint="@string/sign_up_certification_hint" />

    <TextView
        android:visibility="gone"
        android:id="@+id/certification_again"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="@+id/user_certification_number"
        app:layout_constraintEnd_toEndOf="@+id/user_certification_number"
        android:background="@drawable/sign_up_btn"
        android:textColor="@color/cherish_text_gray"
        android:gravity="center"
        android:fontFamily="@font/notosanscjkkr_regular"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintTop_toBottomOf="@+id/user_certification_number"
        android:text="@string/sign_up_certification_again"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/certification_ok"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/certification_again"
        app:layout_constraintTop_toBottomOf="@+id/certification_again"
        android:textColor="@color/cherish_pink_sub"
        android:fontFamily="@font/notosanscjkkr_regular"
        android:text="@string/sign_up_certification_check" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        style="@style/RoundButton.SignUp"
        android:text="@string/sign_up_button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_21dp" />

</androidx.constraintlayout.widget.ConstraintLayout>