<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pwfinding.PwFindingFirstFragment">

    <TextView
        android:id="@+id/first_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="69dp"
        android:text="@string/pw_finding_email"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:textColor="#2a2a2a"
        android:textSize="@dimen/text_20sp"
        android:textStyle="normal"
        android:lineSpacingExtra="16sp"/>

    <EditText
        android:hint="@string/sign_up_email_hint"
        android:autofillHints="@string/sign_up_email_hint"
        android:inputType="textEmailAddress"
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_goneMarginTop="@dimen/margin_4dp"
        app:layout_constraintTop_toBottomOf="@+id/first_email"
        android:background="@drawable/search_background"
        android:layout_marginTop="4dp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        style="@style/RoundButton.SignUp"
        android:text="@string/sign_up_button_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_21dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>